Use stack in labels instead of mola

--- a/chart/templates/services.yaml
+++ b/chart/templates/services.yaml
@@ -5,9 +5,10 @@ kind: Service
 metadata:
   name: "{{ $name }}"
   labels:
-    dev.okteto.com/mola: "{{ include "mola.fullname" $ }}-{{ $name }}"
+    stack.okteto.com/name: "{{ include "stack.fullname" $ }}"
+    stack.okteto.com/service: "{{ include "stack.fullname" $ }}-{{ $name }}"
     app.kubernetes.io/component: "{{ $name }}"
-    {{- include "mola.labels" $ | nindent 4 }}
+    {{- include "stack.labels" $ | nindent 4 }}
   {{ if $service.public }}
   annotations:
     dev.okteto.com/auto-ingress: "true"
@@ -19,7 +20,8 @@ spec:
   - port: {{ $port }}
   {{ end }}
   selector:
-    dev.okteto.com/mola: "{{ include "mola.fullname" $ }}-{{ $name }}"
+    stack.okteto.com/name: "{{ include "stack.fullname" $ }}"
+    stack.okteto.com/service: "{{ include "stack.fullname" $ }}-{{ $name }}"
 ---
 {{- end }}
 {{- end }}
