--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: mola
+name: stack
 description: A Helm chart for deploying containerized applications
 type: application
 version: 0.1.0
