--- a/chart/templates/deployments.yaml
+++ b/chart/templates/deployments.yaml
@@ -5,18 +5,21 @@ kind: Deployment
 metadata:
   name: "{{ $name }}"
   labels:
-    dev.okteto.com/mola: "{{ include "mola.fullname" $ }}-{{ $name }}"
+    stack.okteto.com/name: "{{ include "stack.fullname" $ }}"
+    stack.okteto.com/service: "{{ include "stack.fullname" $ }}-{{ $name }}"
     app.kubernetes.io/component: "{{ $name }}"
-    {{- include "mola.labels" $ | nindent 4 }}
+    {{- include "stack.labels" $ | nindent 4 }}
 spec:
   replicas: {{ $service.replicas }}
   selector:
     matchLabels:
-      dev.okteto.com/mola: "{{ include "mola.fullname" $ }}-{{ $name }}"
+      stack.okteto.com/name: "{{ include "stack.fullname" $ }}"
+      stack.okteto.com/service: "{{ include "stack.fullname" $ }}-{{ $name }}"
   template:
     metadata:
       labels:
-        dev.okteto.com/mola: "{{ include "mola.fullname" $ }}-{{ $name }}"
+        stack.okteto.com/name: "{{ include "stack.fullname" $ }}"
+        stack.okteto.com/service: "{{ include "stack.fullname" $ }}-{{ $name }}"
     spec:
       containers:
         - name: "{{ $name }}"
